syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";

// 库存服务
service Inventory {
    // 设置库存
    rpc SetInv(GoodsInvInfo) returns(google.protobuf.Empty);

    // 获取库存信息
    rpc InvDetail(GoodsInvInfo) returns (GoodsInvInfo);

    // 库存扣减
    rpc Sell(SellInfo) returns (google.protobuf.Empty);

    // 库存归还
    rpc Reback(SellInfo) returns(google.protobuf.Empty);
}

// 商品库存信息
message GoodsInvInfo {
    int32 goodsId = 1; // 商品ID
    int32 num = 2; // 数量
}

// 销售信息
message SellInfo {
    repeated GoodsInvInfo goodsInfo = 1; // 商品信息列表
    string orderSn = 2; // 订单编号
}