
syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";

service Order {
    //购物车
    // 获取用户的购物车信息
    rpc CartItemList(UserInfo) returns(CartItemListResponse);
    // 添加商品到购物车
    rpc CreateCartItem(CartItemRequest) returns(ShopCartInfoResponse);
    // 修改购物车信息
    rpc UpdateCartItem(CartItemRequest) returns(google.protobuf.Empty);
    // 删除购物车条目
    rpc DeleteCartItem(CartItemRequest) returns(google.protobuf.Empty);

    //订单
    // 创建订单
    rpc CreateOrder(OrderRequest) returns (OrderInfoResponse);
    // 订单列表
    rpc OrderList(OrderFilterRequest) returns (OrderListResponse);
    // 订单详情
    rpc OrderDetail(OrderRequest) returns (OrderInfoDetailResponse);
    // 修改订单状态
    rpc UpdateOrderStatus(OrderStatus) returns (google.protobuf.Empty);
}

message UserInfo {
    // 用户ID
    int32 id = 1;
}

message OrderStatus {
    // 订单状态ID
    int32 id = 1;
    // 订单流水号
    string orderSn = 2;
    // 订单状态
    string status = 3;
}

message CartItemRequest {
    // 购物车商品ID
    int32 id = 1;
    // 用户ID
    int32 userId = 2;
    // 商品ID
    int32 goodsId = 3;
    // 商品名称
    string goodsName = 4;
    // 商品图片
    string goodsImage = 5;
    // 商品价格
    float goodsPrice = 6;
    // 商品数量
    int32 nums = 7;
    // 是否选中
    bool checked = 8;
}

message OrderRequest {
    // 订单ID
    int32 id = 1;
    // 用户ID
    int32 userId = 2;
    // 收货地址
    string address = 3;
    // 收货人姓名
    string name = 4;
    // 收货人手机号码
    string mobile = 5;
    // 邮编
    string post = 6;
}

message OrderInfoResponse {
    // 订单ID
    int32 id = 1;
    // 用户ID
    int32 userId = 2;
    // 订单流水号
    string orderSn = 3;
    // 支付类型
    string payType = 4;
    // 订单状态
    string status = 5;
    // 邮编
    string post = 6;
    // 订单总价
    float total = 7;
    // 收货地址
    string address = 8;
    // 收货人姓名
    string name = 9;
    // 收货人手机号码
    string mobile = 10;
    // 下单时间
    string addTime = 11;
}

message ShopCartInfoResponse {
    // 购物车商品ID
    int32 id = 1;
    // 用户ID
    int32 userId = 2;
    // 商品ID
    int32 goodsId = 3;
    // 商品数量
    int32 nums = 4;
    // 是否选中
    bool checked = 5;
}

message OrderItemResponse {
    // 订单商品ID
    int32 id = 1;
    // 订单ID
    int32 orderId = 2;
    // 商品ID
    int32 goodsId = 3;
    // 商品名称
    string goodsName = 4;
    // 商品图片
    string goodsImage = 5;
    // 商品价格
    float goodsPrice = 6;
    // 商品数量
    int32 nums = 7;
}

message OrderInfoDetailResponse {
    // 订单信息
    OrderInfoResponse orderInfo = 1;
    // 订单商品列表
    repeated OrderItemResponse goods = 2;
}

message OrderFilterRequest {
    // 用户ID
    int32 userId = 1;
    // 请求页数
    int32 pages = 2;
    // 每页显示数量
    int32 pagePerNums = 3;
}

message OrderListResponse {
    // 总订单数
    int32 total = 1;
    // 订单列表
    repeated OrderInfoResponse data = 2;
}

message CartItemListResponse {
    // 总购物车数
    int32 total = 1;
    // 购物车商品列表
    repeated ShopCartInfoResponse data = 2;
}